# PyStreamSaver

./: .gitignore  LICENSE.md  README.md  YouTube Downloader Project Progress and Future Plans.md  changelog.md  hello_world  main.py  main_gui.py  pyproject.toml  requirements.txt  setup.py  tasks_have_to_complete.md  youtube.py
PyStreamSaver_data/: data.json
StreamDL_Buddy/: pyproject.toml
StreamDL_CLI/: pyproject.toml
streamdl/: LICENSE.md  pyproject.toml  requirements.txt
streamdl/src/streamdl/: error.py  utility.py
streamdl/src/streamdl/StreamScraper/: Scraper.py  __init__.py
streamdl/src/streamdl/youtubedl/: __init__.py  youtube.py
streamdl/test/: first_test.py
