[tool.poetry]
name = "pystreamsaver"
version = "0.1.0"
description = "StreamSaver application with CLI and GUI"
authors = ["Akhand raj <akhandr153@gmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.8.4"
yapf = "^0.43.0"
pytest = "^8.3.4"
