[tool.poetry]
name = "streamdl-cli"
version = "0.1.0"
description = "Command-line tool for media downloads."
authors = ["Akhand Raj <akhandr153@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
