[tool.poetry]
name = "streamdl"
version = "0.1.0"
description = "Handles media download link extraction and metadata fetching."
authors = ["Akhand raj <akhandr153@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
